# teleharvest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.in
.github/workflows/: ci.yml  release.yml
config/: .env.example  config.example.yaml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
scripts/: login.py  migrate.py  setup_dev.sh
src/teleharvest/: __init__.py  __main__.py  main.py  py.typed
src/teleharvest/api/: __init__.py  server.py
src/teleharvest/bot/: __init__.py  card.py  commands.py  notifier.py
src/teleharvest/config/: __init__.py  schema.py  settings.py
src/teleharvest/core/: __init__.py  lifecycle.py  scheduler.py  task.py
src/teleharvest/db/: __init__.py  models.py  session.py
src/teleharvest/db/repositories/: __init__.py  channel_repo.py  media_repo.py  task_repo.py
src/teleharvest/downloader/: __init__.py  engine.py  progress.py  resume.py
src/teleharvest/monitor/: __init__.py  client.py  filters.py  handler.py
src/teleharvest/proxy/: __init__.py  manager.py
src/teleharvest/storage/: __init__.py  cleaner.py  dedup.py  manager.py
src/teleharvest/utils/: hash.py  logger.py  naming.py  retry.py  time.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/integration/: test_downloader.py  test_storage.py
tests/unit/: test_bot_notifier.py  test_cleaner.py  test_dedup.py  test_engine.py  test_filters.py  test_handler.py  test_media_repo.py  test_progress.py  test_proxy.py  test_settings.py  test_task.py
